--- a/templates/menu.html
+++ b/templates/menu.html
@@ -203,7 +203,8 @@
                         <figure class="snip1200">
                             <img src="../static/src/tart_img1.jpg" alt="sq-sample27" />
                             <figcaption>
-                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <p>It is a pie baked with Korean apples. It is considered one of the national foods of the United States.<br><br>
+                                   Cost: 4000won</p>
                                 <div class="heading">
                                     <h2>Apple<span> Tart</span></h2>
                                 </div>
@@ -215,9 +216,10 @@
                         <figure class="snip1200">
                             <img src="../static/src/tart_img2.jpg" alt="sq-sample27" />
                             <figcaption>
-                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <p>There are various tarts, but the first tart that comes to mind in spring is also a tart with fresh strawberries.<br><br>
+                                    Cost: 4000won</p>
                                 <div class="heading">
-                                    <h2>딸기<span>타르트</span></h2>
+                                    <h2>Strawberry<span>Tart</span></h2>
                                 </div>
                             </figcaption>
                             <a href="#"></a>
@@ -227,9 +229,10 @@
                         <figure class="snip1200">
                             <img src="../static/src/tart_img3.jpg" alt="sq-sample27" />
                             <figcaption>
-                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <p>It's a tart with nutty walnuts and pecans. It's full of savory taste.<br><br>
+                                    Cost: 4500won</p>
                                 <div class="heading">
-                                    <h2>호두 피칸<span>타르트</span></h2>
+                                    <h2>Walnut Pecan<span>Tart</span></h2>
                                 </div>
                             </figcaption>
                             <a href="#"></a>
@@ -239,9 +242,10 @@
                         <figure class="snip1200">
                             <img src="../static/src/tart_img4.jpg" alt="sq-sample27" />
                             <figcaption>
-                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <p>It is a dessert pie filled with custard cream made using egg yolks, and it is called "Pastel de nata" in Portugal, the origin.<br><br>
+                                    Cost: 3500won</p>
                                 <div class="heading">
-                                    <h2>에그<span>타르트</span></h2>
+                                    <h2>Egg<span>Tart</span></h2>
                                 </div>
                             </figcaption>
                             <a href="#"></a>
@@ -254,9 +258,11 @@
                         <figure class="snip1200">
                             <img src="../static/src/tart_img5.jpg" alt="sq-sample27" />
                             <figcaption>
-                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <p>Banana + Toffee, commonly called Banoffee Pie, is a dessert that is often seen in England and America.
+                                    The combination of banana + toffee (caramel) is divon, and chocolate is paired a lot.<br><br>
+                                    Cost: 4000won</p>
                                 <div class="heading">
-                                    <h2>바노피<span>타르트</span></h2>
+                                    <h2>Banoffee<span>Tart</span></h2>
                                 </div>
                             </figcaption>
                             <a href="#"></a>
@@ -266,9 +272,10 @@
                         <figure class="snip1200">
                             <img src="../static/src/tart_img6.jpg" alt="sq-sample27" />
                             <figcaption>
-                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <p>It is a tart with blueberries with a deep purple color and a lightly pungent and sour taste.<br><br>
+                                    Cost: 4000won</p>
                                 <div class="heading">
-                                    <h2>블루베리<span>타르트</span></h2>
+                                    <h2>Blueberry<span>Tart</span></h2>
                                 </div>
                             </figcaption>
                             <a href="#"></a>
@@ -278,9 +285,11 @@
                         <figure class="snip1200">
                             <img src="../static/src/tart_img7.jpg" alt="sq-sample27" />
                             <figcaption>
-                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <p>It's a chocolate tart filled with deep chocolate filling.
+                                    If you take a bite, it is a tart that tastes like a soft and thick cake like a Gato Chocolat cake.<br><br>
+                                    Cost: 5000won</p>
                                 <div class="heading">
-                                    <h2>초콜릿<span>타르트</span></h2>
+                                    <h2>Chocolate<span>Tart</span></h2>
                                 </div>
                             </figcaption>
                             <a href="#"></a>
@@ -290,9 +299,10 @@
                         <figure class="snip1200">
                             <img src="../static/src/tart_img8.jpg" alt="sq-sample27" />
                             <figcaption>
-                                <p>I say, if your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+                                <p>It is a tart with green grapes full of freshness.<br><br>
+                                    Cost: 5500won</p>
                                 <div class="heading">
-                                    <h2>청포도<span>타르트</span></h2>
+                                    <h2>Green Grapes<span>Tart</span></h2>
                                 </div>
                             </figcaption>
                             <a href="#"></a>
