--- a/static/css/brand.css
+++ b/static/css/brand.css
@@ -1,5 +1,5 @@
-.body{
-    text-align: center;
+html {
+    scroll-behavior: smooth;
 }
 #Sub-header {
     position: relative;
@@ -25,44 +25,46 @@
     background-color: rgb(224, 147, 99);   color: #F9F8EA;
 }
 
-.chart{
-    width: 1000px;
-    height: 800px;
-    position: relative;
-    top: 200px;
-    left: 350px;
-}
 #piechart{
     background-color: #f9f8ea;
-    width: 900px;
-    height: 600px;
+    width: 600px;
+    height: 400px;
     border: 1px solid #784e2c;
-}
-.line{
-    width: 1000px;
-    height: 700px;
 }
 #curve_chart{
-    position: relative;
-    top: 100px;
-    left: 350px;
-
-    width: 900px;
-    height: 500px;
+    width: 600px;
+    height: 400px;
     border: 1px solid #784e2c;
 }
-.mapPart{
-    height: 800px;
+#mapPart{
+    height: 1500px;
 }
-#map {
+#map{
     position: relative;
-    top: 50px;
-    left: 350px;
-
+    top: 350px;
+    left: 300px;
     width: 900px;
     height: 700px;
     border: 1px solid #784e2c;
 }
+#mapPart h2{
+    position: relative;
+    top: 450px;
+    left: 20px;
+}
+#mapPart p{
+    position: relative;
+    top: 450px;
+    left: -150px;
+}
+
 .body{
     background-color: #f9f8ea;
+}
+.row{
+    position: relative;
+    top: 200px;
+    left: 150px;
+    width: 1300px;
+    height: 300px;
 }
