--- a/templates/franchise.html
+++ b/templates/franchise.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Francise</title>
+    <link rel="stylesheet" href="../static/css/header.css" />
     <link rel="stylesheet" href="../static/css/francise.css" />
 
     <script>
@@ -29,6 +30,7 @@
   </head>
 
   <body>
+  <header></header>
     <div id="wrap">
       <section id="visual">
         <div class="visual-img-wrap">
@@ -253,7 +255,9 @@
           }
         }
       </script>
+      <section id="page-start"></section>
     </div>
+  <script src="../static/js/header.js"></script>
     <script src="../static/js/francise.js"></script>
   </body>
 </html>
