--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,25 +3,25 @@
   <head> </head>
   <body>
     <div class="inner">
-      <a href="mainPage.html" class="logo">DE BON</a>
+        <a href="mainPage.html" class="logo">DE BON</a>
 
-      <ul>
-        <li><a href="#">드본소개</a></li>
-        <li class="splitBar">|</li>
-        <li><a href="#">이용약관</a></li>
-        <li class="splitBar">|</li>
-        <li><a href="#">개인정보 처리방침</a></li>
-      </ul>
-      <pre>
-                  드본 | 대표자 : 충북대 | 본사 : 서울특별시 성동구 뚝섬로1길 63, 영창디지털타워 11층 | 대표전화 : 1522 - 9774 | 팩스 : 02 - 540 - 2237
-                  사업자번호 : 261 - 81 - 15766 | 드본 브레드 사업자번호 : 680 - 87 - 00452
-                  사이버몰 내 판매되는 상품 중에는 드본에 등록한 개별 판매자가 판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.
-                  마켓플레이스(오픈마켓) 상품의 경우 드본은 통신판매중개자이며 통신판매의 당사자가 아닙니다.
-                  드본은 마켓플레이스(오픈마켓) 상품, 거래정보 및 거래 등에 대하여 책임을 지지 않습니다.
+        <ul>
+            <li><a href="#">Introducing Debon</a></li>
+            <li class="splitBar">|</li>
+            <li><a href="#">Terms and Conditions</a></li>
+            <li class="splitBar">|</li>
+            <li><a href="#">Personal information processing policy</a></li>
+        </ul>
+        <pre>
+                  Debon | Representative: Chungbuk National University | Headquarters: Chungbuk National University, Chung-daero 1, Seowon-gu, Cheongju-si, Chungcheongbuk-do
+                  | Representative phone number : 1522 - 9774 | Fax : 02 - 540 - 2237
+                  Business number : 261 - 81 - 15766 | Debon Bread Business Number : 680 - 87 - 00452
+                  Products sold within the Cyber Mall include Marketplace (open market) products sold by individual sellers registered with Debon.
+                  In the case of marketplace (open market) products, Debon is a mail order broker and is not a party to mail order.
+                  Debon is not responsible for marketplace (open market) products, transaction information, transactions, etc.
 
-                  Copyright © 드본 All rights reserved.
-        </pre
-      >
+                  Copyright © Debon All rights reserved.
+        </pre>
     </div>
   </body>
 </html>
