--- a/templates/DessertLogin.html
+++ b/templates/DessertLogin.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <title>로그인창</title>
     <link rel="stylesheet" href="../static/css/DessertLogin.css" />
-    <link rel="stylesheet" href="../static/css/header.css">
+    <link rel="stylesheet" href="../static/css/header.css" />
     <link rel="stylesheet" href="../static/css/footer.css" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
@@ -47,7 +53,11 @@
           <li><a href="#">아이디찾기</a></li>
           <li><a href="#">비밀번호찾기</a></li>
         </ul>
-        <button id="LoginClick" type="submit" onclick="loginchecking(); return false;">
+        <button
+          id="LoginClick"
+          type="submit"
+          onclick="loginchecking(); return false;"
+        >
           로그인
         </button>
 
