brand 페이지 수정

--- a/templates/header.html
+++ b/templates/header.html
@@ -12,9 +12,9 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="brand.html">BRAND</a></li>
                         <li><a href="menu.html">MENU</a></li>
-                        <li><a href="franchise.html">FRANCHISE</a></li>
                         <li><a href="custom.html">ORDER</a></li>
                         <li><a href="news.html">NEWS</a></li>
+                        <li><a href="mypage.html">MYPAGE</a></li>
                         <li><a href="DessertLogin.html">LOGIN</a></li>
                     </ul>
                 </div>
