--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -90,6 +90,7 @@
                 </table>
             </form>
             <button id="reset" class="btn" onclick="buy()">Buy Now</button>
+            <footer></footer>
 
         </div>
     </div>
