--- a/templates/brand.html
+++ b/templates/brand.html
@@ -59,7 +59,7 @@
             </div>
             <div class="row" id="col1">
                 <div class="col-md-6">
-                    <h3>Best Seller</h3>
+                    <h3 style="padding-top: 50px;">Best Seller</h3>
                     <p>This chart shows a list of the best-selling desserts in Debon. <br>
                         The best seller in Devon is apple tart, followed by chocolate tart and carrot cake. There are blueberry yogurt cakes, and so on. <br>
                         You can see that apple tarts using domestic apples are the most popular, and generally, tarts are more popular than cakes. <br>
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <h3>Sales Trend</h3>
+                    <h3 style="padding-top: 50px;">Sales Trend</h3>
                     <p>This chart shows sales trends for 2020 and 2021. <br>
                         If you look at the chart, 2020 shows high sales in the beginning, but it is falling toward the second half.
                         This can be analyzed because sales have decreased due to the influence of COVID-19. <br>
