--- a/templates/brand.html
+++ b/templates/brand.html
@@ -106,7 +106,7 @@
     <script src="../static/js/footer.js"></script>
     <script
             class="script_api"
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjgzOCwqS88xhlO2-TjIyeeBdvbxroh70&callback=myMap"
+            src="https://maps.googleapis.com/maps/api/js?key=API_KEY&callback=myMap"
     ></script>
 </body>
 </html>
